--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@
 }
         li a {
             display: block; 
+            overflow: auto;
             color: white;
             text-decoration: none;
             padding: 50px 25px;
