--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@
     .innhold {
         position: absolute;
         overflow-y: scroll;
+        overflow: auto;
         overflow-wrap: wrap;
         left: 20%;
         bottom: 15%;
