--- a/startside.css
+++ b/startside.css
@@ -1,10 +1,18 @@
 .tittel {
-    bottom: 20%;
-    color: blue;
-
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 15%;
+    background-color: skyblue;
 }
 
 .innhold {
-    bottom: 80%;
-    color: yellow;
+    position: absolute;
+    top:15%;
+    left: 0;
+    width:100%;
+    height: 85%;
+    background-color: lightgrey;
+    color:white;
 }
