--- a/startside.css
+++ b/startside.css
@@ -9,10 +9,14 @@
 
 .innhold {
     position: absolute;
-    top:15%;
-    left: 0;
-    width:100%;
-    height: 85%;
+    top:20%;
+    left: 5%;
+    width:90%;
+    height: 75%;
     background-color: lightgrey;
     color:white;
+}
+.bilde {
+    position: absolute;
+    background-size: contain;
 }
