--- a/startside.css
+++ b/startside.css
@@ -9,10 +9,10 @@
 
 .innhold {
     position: absolute;
-    top:20%;
-    left: 5%;
-    width:90%;
-    height: 75%;
+    top:30%;
+    left: 0;
+    width:100%;
+    height: 70%;
     background-color: lightgrey;
     color:white;
 }
