--- a/startside.css
+++ b/startside.css
@@ -18,5 +18,9 @@
 }
 .bilde {
     position: absolute;
-    background-size: contain;
+    top:15%;
+    left:0;
+    width: 100%;
+    height: 30%;
+    background-size: cover;
 }
