--- a/startside.css
+++ b/startside.css
@@ -16,11 +16,11 @@
     background-color: lightgrey;
     color:white;
 }
-.bilde {
+#bilde {
     position: absolute;
     top:15%;
     left:0;
     width: 100%;
     height: 15%;
-    background-size: cover;
+    background-size: contain;
 }
