--- a/startside.css
+++ b/startside.css
@@ -4,7 +4,8 @@
     top: 0;
     width: 100%;
     height: 15%;
-    background-color: skyblue;
+    color:firebrick;
+    background-color: black;
 }
 
 .innhold {
@@ -13,8 +14,11 @@
     left: 0;
     width:100%;
     height: 70%;
-    background-color: lightgrey;
+    background-color:black;
     color:white;
+    font-size:2em;
+    padding:20px;
+    
 }
 #bilde {
     position: absolute;
