--- a/startside.css
+++ b/startside.css
@@ -6,6 +6,8 @@
     height: 15%;
     color:firebrick;
     background-color: black;
+    text-align: center;
+    padding-top: 20px;
 }
 
 .innhold {
