--- a/animation.css
+++ b/animation.css
@@ -2,14 +2,14 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 75px;
-    height: 90px;
+    width: 210px;
+    height: 160px;
     background-size: contain;
     background-repeat: no-repeat;
-    animation: gaaTur 10s linear infinite;
+    animation: svampebob 10s linear infinite;
 }
 
- @keyframes gaaTur {
+ @keyframes svampebob {
     0% { top:80%; left: 0%; transform: rotate(10deg);}
     20% { top: 40%; left: 20%;transform: rotate(-360deg);}
     40% { top: 50%; left: 36%;transform: rotate(-160deg);}
