--- a/startside.css
+++ b/startside.css
@@ -36,3 +36,17 @@ img {
     width: 100%;
 
 }
+li {
+   list-style-type: none;
+   color: white;
+}
+
+li a {
+    text-decoration: none;
+    color: firebrick;
+}
+
+li a:hover {
+    background-color: black;
+    color: white;
+}
