--- a/datautstyr/datautstyr.css
+++ b/datautstyr/datautstyr.css
@@ -48,5 +48,16 @@ li:last-child {
     border-bottom: none;
 }
 
-
+#main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    }
+    #main div {
+    background: red;
+    width: 20em;
+    height: 20em;
+    margin: 1em;
+    }
 
