--- a/datautstyr/datautstyr.css
+++ b/datautstyr/datautstyr.css
@@ -1,7 +1,7 @@
 body {
     background: url(bilder/hacker.jpg);
     position: absolute;
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
     z-index: 1; 
 }
