--- a/startside.css
+++ b/startside.css
@@ -73,3 +73,54 @@ li a:hover{
     width: 297px;
     height:168px;
 }
+
+
+#nabohoyre {
+    position: absolute;
+    left: 80%;
+    top: 5px;
+    text-decoration: none;
+}
+
+#nabohoyre ul {
+    -webkit-padding-start: 0;
+}
+
+#nabohoyre li {
+    display: block;
+}
+
+#nabohoyre li a {
+    text-decoration: none;
+    margin: 20px;
+    text-align: center;
+    height: 2em;
+    border-radius: 15px;
+    padding: 10px;
+    font-size: 1.3em;
+}
+
+#nabovenstre {
+    position: absolute;
+    left: 10px;
+    top: 5px;
+    text-decoration: none;
+}
+
+#nabovenstre ul {
+    -webkit-padding-start: 0;
+}
+
+#nabovenstreli {
+    display: block;
+}
+
+#nabovenstre li a {
+    text-decoration: none;
+    margin: 20px;
+    text-align: center;
+    height: 2em;
+    border-radius: 15px;
+    padding: 10px;
+    font-size: 1.3em;
+}
