--- a/datautstyr/lagring.css
+++ b/datautstyr/lagring.css
@@ -23,7 +23,8 @@ padding: 1em;
    }
     #main div {
     background:#1b8df2;
-    width: 20em;
+    min-width: 20em;
+    max-width: 45em;
     min-height: 20em;
     margin: 1em;
     padding: 0.5em;
