--- a/bank/css/index.css
+++ b/bank/css/index.css
@@ -48,3 +48,26 @@ footer {
         line-height: 68px;
         font-size: 30px;
       }
+
+.money {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 50px;
+    height: 50px;
+    animation: money 20s ease-in-out infinite;
+    background-image: url("../bilder/money.gif");
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+@keyframes  money {
+    0% {
+        left: -100px; 
+        top: 55px;
+    }
+    100% {
+        left: 100vw;
+        top: 55px;
+    }
+}
