--- a/bank/css/index.css
+++ b/bank/css/index.css
@@ -1,8 +1,8 @@
 header {
     position: absolute;
- width: 100vw;
- background-color: #edd9c0;
- height: 15vh;
+    width: 100vw;
+    background-color: #edd9c0;
+    height: 15vh;
 }
 
 header h1 {
@@ -12,20 +12,26 @@ header h1 {
     color: #FFFFFF;
 }
 
-
 #menu {
     position: absolute;
     top: 0;
     height: 10vh;
     width: 100vw;
-
 }
+
+#artikkel {
+    position: absolute;
+    top: 10vh;
+    height: auto;
+    width: 100vw;
+}
+
 #main {
-position: absolute;
-top: 15vh;
-background-color: #c9d8c5;
-width: 100vw;
-height: 70vh;
+    position: absolute;
+    top: 15vh;
+    background-color: #c9d8c5;
+    width: 100vw;
+    height: 70vh;
 }
 
 footer {
@@ -34,20 +40,37 @@ footer {
     width: 100vw;
     height: 15vh;
     background-color: #7d4627;
-    }
-    
-.flex-menu {
-        display: flex;
-        flex-wrap: nowrap;
-      }
+}
 
-.flex-menu > div a{
-        background-color:#a8b6bf;
-        width: 25vw;
-        text-align: center;
-        line-height: 68px;
-        font-size: 30px;
-      }
+
+
+#footer, table, td, th {
+    text-align: center; 
+   color: #eedac0;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+th {
+    height: 60px;
+}
+
+
+.flex-menu {
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.flex-menu>div a {
+    background-color: #a8b6bf;
+    width: 25vw;
+    text-align: center;
+    line-height: 68px;
+    font-size: 30px;
+}
 
 .money {
     position: absolute;
@@ -61,9 +84,9 @@ footer {
     background-repeat: no-repeat;
 }
 
-@keyframes  money {
+@keyframes money {
     0% {
-        left: -100px; 
+        left: -100px;
         top: 55px;
     }
     100% {
@@ -71,3 +94,4 @@ footer {
         top: 55px;
     }
 }
+
