--- a/startside.css
+++ b/startside.css
@@ -10,12 +10,12 @@
     padding-top: 20px;
 }
 
-.innhold {
+#innhold {
     position: absolute;
     top:30%;
     left: 0;
     width:100%;
-    height: 70%;
+    min-height: 100%;
     background-color:black;
     color:white;
     font-size:2em;
@@ -119,3 +119,32 @@ li a:hover{
     font-size: 1.3em;
 }
 
+.button {
+    display: inline-block;
+    border-radius: 4px;
+    background-color: black;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 20px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  
+  
+  
+  
+  .button:hover {
+    padding-right: 25px;
+    background-color: pink;
+
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
+  }
