--- a/startside.css
+++ b/startside.css
@@ -12,11 +12,11 @@
 
 #innhold {
     position: absolute;
-    top:30%;
+    top:17%;
     left: 0;
     width:100%;
     min-height: 100%;
-    background-color:black;
+    background-color:white;
     color:white;
     font-size:2em;
     padding:20px;
@@ -33,7 +33,7 @@
 }
 #bilde {
     position: absolute;
-    top:15%;
+    top:0%;
     left:0;
     width: 100%;
     height: 15%;
@@ -47,7 +47,7 @@ img {
 }
 li {
    list-style-type: none;
-   color: white;
+   color: firebrick;
 }
 
 li a {
@@ -56,8 +56,8 @@ li a {
 }
 
 li a:hover{
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 }
 #tv {
     position: fixed;
@@ -122,13 +122,13 @@ li a:hover{
 .button {
     display: inline-block;
     border-radius: 4px;
-    background-color: black;
+    background-color: white;
     border: none;
-    color: #FFFFFF;
+    color: firebrick;
     text-align: center;
-    font-size: 28px;
-    padding: 20px;
-    width: 200px;
+    font-size: 1em;
+    padding: 10px;
+    width: 150px;
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
@@ -140,7 +140,8 @@ li a:hover{
   
   .button:hover {
     padding-right: 25px;
-    background-color: pink;
+    background-color: firebrick;
+    color: white;
 
   }
   
