--- a/media/media.css
+++ b/media/media.css
@@ -60,3 +60,10 @@ img {
     width: 200px;
     height: 200px;
 }
+
+@media all and (max-width: 450px) {
+    #main img {
+   width: 300px;
+   height: 250px;
+    }
+  }
