--- a/vg3/registrering/registrer.css
+++ b/vg3/registrering/registrer.css
@@ -1,5 +1,36 @@
-#main {
- 
- background-color: skyblue;
- height: 50vh;          
+
+form {
+    width: 30em;
+    max-width: 85%;
+    padding: 5px; 
+    border-radius: 50px;
+    background-color: greenyellow;
+    border:solid gray 200px;
+    position: relative;
+}
+
+
+
+form > label  {
+    display: grid; 
+    grid-template-columns: 2fr 1fr;
+    margin: 5px; 
+    padding: 5px; 
+    border-radius: 5px;
+    background-color: greenyellow;
+    border:solid gray 1px;
+}
+
+form:after {
+    color:blue;
+    content: "Registrering";
+    position: absolute;
+    right: 20px;
+    top: -20px;
+}
+
+#lagre {
+    background-color: gray;
+    border-bottom-left-radius: 50%;
+    border-top-right-radius:50%;
 }
