--- a/vg3/balls/balls.css
+++ b/vg3/balls/balls.css
@@ -25,3 +25,32 @@ height: 26px;
 border-radius: 50%;
 }
 
+#bil {
+    position: relative;
+    left: 50px;
+    top: 200px;
+    width: 20px;
+    height: 50px;
+    border-radius: 5px;
+    border: solid rgb(251, 255, 8) 2px;
+    background-color: rgb(72, 43, 92);
+}
+
+#stripe {
+    position: absolute;
+    width: 5px;
+    height: 48px;
+    left: 7px;
+    border: solid pink 1px;
+    background-color: white;
+}
+#vindu {
+        position: absolute;
+       
+        width: 16px;
+        height: 10px;
+        border-radius: 5px;
+        border: solid rgb(221, 132, 221) 2px;
+        background-color: aqua;
+    
+}
