--- a/vg3/carDodge/css/background.css
+++ b/vg3/carDodge/css/background.css
@@ -14,6 +14,10 @@ canvas {
 .slider:hover {
     opacity: 1;
   }
+
+  #fornavn {
+      background-color: rgba(199, 238, 209, 0.925);
+  }
   
 
 .slider {
@@ -58,13 +62,22 @@ canvas {
 }
 .kant_melding {
     position: absolute;
-    margin-left: 24%;
+    margin-left: 22%;
     width: 50%;
     border: 3px solid green;
     padding: 10px;
     background: rgba(133,215,153, 0.8);
     text-align: center;
-    margin-top: 170px;
+    margin-top: 100px;
+}
+
+.poeng_tavle {
+    position: absolute;
+    margin-left: 0%;
+    width: 20%;
+    border: 3px solid green;
+    background: rgba(133,215,153, 0.8);
+    text-align: center;
 }
 
 .start-btn {
